--- a/.github/workflows/Sync_to_hugging_face.yml
+++ b/.github/workflows/Sync_to_hugging_face.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HFML_TOKEN }}
-        run: git push -f https://Insight-Analyst:$HF_TOKEN@huggingface.co/spaces/Insight-Analyst/Pneumonia-Detection.App main
+        run: git push -f https://Insight-Analyst:$HF_TOKEN@huggingface.co/spaces/Insight-Analyst/Pneumonia_Detection_by_StoryBoard main
